# eeg_ml

./: .gitignore  README.md  eeg_emotion_recognition.ipynb  main.py  pyproject.toml
